# Rosetta

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  rosetta.py  setup.py  setup.sh
src/: __init__.py
src/cli/: __init__.py  commands.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  analyzer.py  scanner.py  translator.py
src/utils/: __init__.py  excel_utils.py  file_utils.py  messages.py
test_files/: clean-test.vue  test-file.vue
tests/: __init__.py  clean-test.vue  test-file.vue  test.ts
